Models with loops added. 1.4 modified for testing

--- a/HA2/HA2.ipynb
+++ b/HA2/HA2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,17 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.naive_bayes import BernoulliNB, GaussianNB\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "\n",
     "\n",
     "# import warnings\n",
     "# warnings.filterwarnings('ignore')\n",
@@ -39,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +368,7 @@
        "4   ?   ?   ?  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +420,7 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th>Class</th>\n",
+       "      <th></th>\n",
        "      <th>3</th>\n",
        "      <th>1</th>\n",
        "      <th>5</th>\n",
@@ -419,7 +430,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
+       "      <th>Class</th>\n",
        "      <td>16344</td>\n",
        "      <td>16265</td>\n",
        "      <td>15733</td>\n",
@@ -431,11 +442,11 @@
        "</div>"
       ],
       "text/plain": [
-       "Class      3      1      5      2      4\n",
-       "count  16344  16265  15733  14978  14775"
+       "           3      1      5      2      4\n",
+       "Class  16344  16265  15733  14978  14775"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +505,7 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th>User</th>\n",
+       "      <th></th>\n",
        "      <th>10</th>\n",
        "      <th>0</th>\n",
        "      <th>13</th>\n",
@@ -513,7 +524,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
+       "      <th>User</th>\n",
        "      <td>9573</td>\n",
        "      <td>9048</td>\n",
        "      <td>8739</td>\n",
@@ -534,14 +545,14 @@
        "</div>"
       ],
       "text/plain": [
-       "User     10    0     13    11    14    8     5     12    1     2     6     9   \\\n",
-       "count  9573  9048  8739  8061  7495  6811  5105  4865  4717  4513  4377  3920   \n",
+       "        10    0     13    11    14    8     5     12    1     2     6     9   \\\n",
+       "User  9573  9048  8739  8061  7495  6811  5105  4865  4717  4513  4377  3920   \n",
        "\n",
-       "User    7    4   \n",
-       "count  492  379  "
+       "       7    4   \n",
+       "User  492  379  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +583,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: Scale the training set and apply the same scaler to the remaining datasets (test, ivs)"
+    "#TODO: Scale the training set and apply the same scaler to the remaining datasets (test, ivs)\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "X_ivs_scaled = scaler.transform(X_ivs)"
    ]
   },
   {
@@ -591,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +732,7 @@
        "0  26717  30372  30372  30372  35543  35543  35543  43909  43909  43909  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,11 +745,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of columns to drop from the training set: 21\n",
+      "Number of columns to drop from the test set: 21\n",
+      "Number of columns to drop from the ivs set: 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "#TODO\n",
+    "### JUST TESTING - IGNORE THIS\n",
+    "\n",
+    "# Remove the columns with more than 10% missing values from the training set\n",
+    "\n",
+    "# find columns with more than 10% missing values\n",
+    "train_cols_to_drop = X_train.columns[X_train.isna().sum() > 0.1 * X_train.shape[0]]\n",
+    "test_cols_to_drop = X_test.columns[X_test.isna().sum() > 0.1 * X_test.shape[0]]\n",
+    "ivs_cols_to_drop = X_ivs.columns[X_ivs.isna().sum() > 0.1 * X_ivs.shape[0]]\n",
+    "print(f'Number of columns dropped from the training set: {len(train_cols_to_drop)}')\n",
+    "print(f'Number of columns dropped from the test set: {len(test_cols_to_drop)}')\n",
+    "print(f'Number of columns dropped from the ivs set: {len(ivs_cols_to_drop)}')\n",
+    "# drop columns from the training set\n",
+    "X_train.drop(columns=train_cols_to_drop, inplace=True)\n",
+    "X_test.drop(columns=test_cols_to_drop, inplace=True)\n",
+    "X_ivs.drop(columns=ivs_cols_to_drop, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove NA values from the training set\n",
+    "X_train.dropna(inplace=True)\n",
+    "X_test.dropna(inplace=True)\n",
+    "X_ivs.dropna(inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table with all the data sets (train, test, validation) with different modifications"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO"
+    "# Dictionaries of datasets and models - TEMPLATE [NO REAL DATA] - To be used in the model loops\n",
+    "X_trains = {\"Mod1\": X_train_Mod1, \"Mod2\": X_train_Mod2, \"Mod3\": X_train_Mod3}\n",
+    "y_trains = {\"Mod1\": y_train_Mod1, \"Mod2\": y_train_Mod2, \"Mod3\": y_train_Mod3}\n",
+    "X_tests = {\"Mod1\": X_test_Mod1, \"Mod2\": X_test_Mod2, \"Mod3\": X_test_Mod3}\n"
    ]
   },
   {
@@ -742,6 +813,16 @@
    "metadata": {},
    "source": [
     "## 2. Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Empty dataFrame that will have all the results - to be printed at the end\n",
+    "results_df = pd.DataFrame(columns=['Model', 'Accuracy'])"
    ]
   },
   {
@@ -756,7 +837,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Linear regression\n",
+    "for version in X_trains.keys(): # for each version of the dataset\n",
+    "    lr = LogisticRegression(random_state=42, max_iter=1000) # create the model\n",
+    "    lr.fit(X_trains[version], y_trains[version]) # train the model\n",
+    "    y_pred = lr.predict(X_tests[version]) # predict the test set\n",
+    "    accuracy = accuracy_score(y_test, y_pred) # calculate the accuracy\n",
+    "    results_df = results_df.append({'Model': f'Logistic Regression_{version}', 'Accuracy': accuracy}, ignore_index=True) # add the results to the results df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -770,7 +859,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Tree classifier\n",
+    "for version in X_trains.keys(): # loop over the different versions of the datasets\n",
+    "    tree = DecisionTreeClassifier(random_state=42) # initialize the model\n",
+    "    tree.fit(X_trains[version], y_trains[version]) # fit the model\n",
+    "    y_pred = tree.predict(X_tests[version]) # predict\n",
+    "    accuracy = accuracy_score(y_test, y_pred) # Evaluate the model\n",
+    "    results_df = results_df.append({'Model': f'Decision Tree_{version}', 'Accuracy': accuracy}, ignore_index=True) # add the results to the results_df\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -784,7 +881,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Naive Bayes\n",
+    "for version in X_trains.keys(): # loop over the different versions of the datasets\n",
+    "    gnb = GaussianNB() # initialize the model\n",
+    "    gnb.fit(X_trains[version], y_trains[version]) # fit the model\n",
+    "    y_pred = gnb.predict(X_tests[version]) # predict\n",
+    "    accuracy = accuracy_score(y_test, y_pred) # Evaluate the model\n",
+    "    results_df = results_df.append({'Model': f'Naive Bayes_{version}', 'Accuracy': accuracy}, ignore_index=True) # add the results to the results_df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -798,7 +903,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# KNN\n",
+    "for version in X_trains.keys(): # loop over the different versions of the datasets\n",
+    "    knn = KNeighborsClassifier()# Initialize the model\n",
+    "    knn.fit(X_trains[version], y_trains[version]) # Fit the model\n",
+    "    y_pred = knn.predict(X_tests[version]) # Make predictions\n",
+    "    accuracy = accuracy_score(y_test, y_pred) # Calculate accuracy\n",
+    "    results_df = results_df.append({'Model': f'KNN_{version}', 'Accuracy': accuracy}, ignore_index=True) # Append the result to the DataFrame\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(results_df)"
+   ]
   }
  ],
  "metadata": {
@@ -817,7 +946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
