Update missing data description

--- a/HA2/HA2.ipynb
+++ b/HA2/HA2.ipynb
@@ -1362,7 +1362,7 @@
     }
    ],
    "source": [
-    "# Percentage of missing values for rows missing `X3` value\n",
+    "# all instances lacking values for X3 were also missing all other values in subsequnet columns\n",
     "display_percentage_of_missing_values(X_train[X_train['X3'].isna()])"
    ]
   },
@@ -1496,7 +1496,7 @@
     }
    ],
    "source": [
-    "# to visualise the trend of missing values\n",
+    "# all instances lacking values for X4 were also missing all other values in subsequnet columns\n",
     "X_tmp = X_train.dropna(subset=['X3'])\n",
     "display_percentage_of_missing_values(X_tmp[X_tmp['X4'].isna()])"
    ]
