Deleted extra lin reg

--- a/HA2/HA2.ipynb
+++ b/HA2/HA2.ipynb
@@ -1735,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1752,46 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy score: 0.21076161583905476\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\antun\\AppData\\Roaming\\Python\\Python311\\site-packages\\sklearn\\linear_model\\_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Linear Regression\n",
-    "\n",
-    "# Create a Logistic Regression classifier and train it\n",
-    "log_reg = LogisticRegression()\n",
-    "log_reg.fit(X_train, y_train)\n",
-    "y_pred = log_reg.predict(X_test)\n",
-    "# Print the accuracy score of the classifier\n",
-    "print(f'Accuracy score: {accuracy_score(y_test, y_pred)}')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1815,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1838,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1862,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1886,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1896,8 +1857,9 @@
       "                      Model  Accuracy\n",
       "0  Logistic Regression_Mod1  0.208686\n",
       "1        Decision Tree_Mod1  0.204854\n",
-      "2          Naive Bayes_Mod1  0.202246\n",
-      "3                  KNN_Mod1  0.204268\n"
+      "2        Decision Tree_Mod1  0.204854\n",
+      "3          Naive Bayes_Mod1  0.202246\n",
+      "4                  KNN_Mod1  0.204268\n"
      ]
     }
    ],
