alternative handle missing data function added for discussion

--- a/HA2/HA2.ipynb
+++ b/HA2/HA2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "4   ?   ?   ?  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
        "5   ?   ?   ?  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
        "Class  16344  16265  15733  14978  14775"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
        "User  8739  7495  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1222,7 @@
        "0   0.0%   0.0%   0.0%   0.0%   0.0%    0.0%    0.0%    0.0%    0.0%    0.0%  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1388,7 @@
        "0    0.0%    0.0%  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1551,7 @@
        "0   0.0%   0.0%   0.0%   0.0%   0.0%    0.0%    0.0%    0.0%    0.0%    0.0%  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1603,49 +1603,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 53,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\antun\\AppData\\Local\\Temp\\ipykernel_10816\\2286541868.py:11: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  X.loc[:, columns_to_impute_with_median] = median_imputer.fit_transform(X[columns_to_impute_with_median])\n",
-      "C:\\Users\\antun\\AppData\\Local\\Temp\\ipykernel_10816\\2286541868.py:11: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
-      "  X.loc[:, columns_to_impute_with_median] = median_imputer.fit_transform(X[columns_to_impute_with_median])\n",
-      "C:\\Users\\antun\\AppData\\Local\\Temp\\ipykernel_10816\\2286541868.py:15: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  X.loc[:, columns_to_impute_with_knn] = knn_imputer.fit_transform(X[columns_to_impute_with_knn])\n",
-      "C:\\Users\\antun\\AppData\\Local\\Temp\\ipykernel_10816\\2286541868.py:15: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
-      "  X.loc[:, columns_to_impute_with_knn] = knn_imputer.fit_transform(X[columns_to_impute_with_knn])\n",
-      "C:\\Users\\antun\\AppData\\Local\\Temp\\ipykernel_10816\\2286541868.py:11: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  X.loc[:, columns_to_impute_with_median] = median_imputer.fit_transform(X[columns_to_impute_with_median])\n",
-      "C:\\Users\\antun\\AppData\\Local\\Temp\\ipykernel_10816\\2286541868.py:11: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
-      "  X.loc[:, columns_to_impute_with_median] = median_imputer.fit_transform(X[columns_to_impute_with_median])\n",
-      "C:\\Users\\antun\\AppData\\Local\\Temp\\ipykernel_10816\\2286541868.py:15: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  X.loc[:, columns_to_impute_with_knn] = knn_imputer.fit_transform(X[columns_to_impute_with_knn])\n",
-      "C:\\Users\\antun\\AppData\\Local\\Temp\\ipykernel_10816\\2286541868.py:15: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
-      "  X.loc[:, columns_to_impute_with_knn] = knn_imputer.fit_transform(X[columns_to_impute_with_knn])\n"
-     ]
-    }
-   ],
+   "source": [
+    "NOTE TO KARINA: I've modified the code you have above so that we don't get any warnings. Please decide which version you want to keep (above - yours, below - modified)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modified version to avoid warnings - DECIDE IF TO KEEP OR REMOVE <----------------- KARINA\n",
+    "def generate_column_names(from_idx, to_idx):\n",
+    "    return np.array([[f'X{i}', f'Y{i}', f'Z{i}'] for i in range(from_idx, to_idx + 1)]).flatten().tolist()\n",
+    "\n",
+    "def handle_missing_data(X):\n",
+    "    # Create a copy of the DataFrame to avoid SettingWithCopyWarning\n",
+    "    X = X.copy()\n",
+    "\n",
+    "    # columns 3, 4\n",
+    "    X = X.dropna(subset=['X3', 'X4'])\n",
+    "\n",
+    "    # columns 5, 6\n",
+    "    columns_to_impute_with_median = generate_column_names(5, 6)\n",
+    "    median_imputer = SimpleImputer(missing_values=np.nan, strategy='median')\n",
+    "    X[columns_to_impute_with_median] = median_imputer.fit_transform(X[columns_to_impute_with_median])\n",
+    "\n",
+    "    # columns 7 - 10\n",
+    "    columns_to_impute_with_knn = generate_column_names(7, 10)\n",
+    "    knn_imputer = KNNImputer(n_neighbors=2, weights=\"uniform\")\n",
+    "    X[columns_to_impute_with_knn] = knn_imputer.fit_transform(X[columns_to_impute_with_knn])\n",
+    "\n",
+    "    # column 11\n",
+    "    X = X.drop(columns=['X11', 'Y11', 'Z11'])\n",
+    "\n",
+    "    return X\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "X_train = handle_missing_data(X_train)\n",
     "X_test = handle_missing_data(X_test)"
@@ -1653,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1664,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1673,7 +1674,7 @@
        "((56186, 47), (18789, 47), (58571,), (19524,))"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1692,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1716,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1735,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1752,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1776,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1799,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1823,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1847,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -1857,9 +1858,8 @@
       "                      Model  Accuracy\n",
       "0  Logistic Regression_Mod1  0.208686\n",
       "1        Decision Tree_Mod1  0.204854\n",
-      "2        Decision Tree_Mod1  0.204854\n",
-      "3          Naive Bayes_Mod1  0.202246\n",
-      "4                  KNN_Mod1  0.204268\n"
+      "2          Naive Bayes_Mod1  0.202246\n",
+      "3                  KNN_Mod1  0.204268\n"
      ]
     }
    ],
