Updates + template for models
Added some updates for conclusions for models and added template for model hyperparameter testing

--- a/HA2/HA2.ipynb
+++ b/HA2/HA2.ipynb
@@ -2095,7 +2095,7 @@
     "\n",
     "            accuracy = round(accuracy_score(y_test_imputed, y_pred), 4)\n",
     "            results_df_2.loc[len(results_df_2)] = [model_name, scaling_name, imputer_name, accuracy]\n",
-    "            print(model_name, scaling_name, imputer_name, accuracy)\n",
+    "            # print(model_name, scaling_name, imputer_name, accuracy) I don't think we need this line\n",
     "            \n",
     "results_df_2.sort_values(by=['Accuracy'], ascending=False)"
    ]
@@ -2106,7 +2106,7 @@
    "source": [
     "- We can see that the KNN perform significantly better than all the other models independently from the normalization and imputation method (always over 90%), LogisticRegression also performs quite decent (up to 77%). However, the DecisionTree performs even better, given that we use the `KNN+drop_rows+drop_cols` imputation method.\n",
     "- The imputation type has a slight influence on the score of KNN and LogisticRegression (Median or Median+drop_rows perform the best). However, for the DecisionTree selecting the `KNN+drop_rows+drop_cols` imputation method is a critical step (it reaches 90% accuracy). For all the remaining imputation methods it performs very poorly (~50%). For NaiveBayes `KNN+drop_rows+drop_cols`  also turns out to be significantly better than other methods.\n",
-    "- Both types of data scaling seem to be quite comparable. However, for KNN `MinMax` slightly dominates, and for LogisticRegression `Standardization`"
+    "- Both types of data scaling seem to be quite comparable. However, for KNN `MinMax` slightly dominates, and for LogisticRegression `Standardization`. As expected, scaling method does not affect performance of DecisionTree and NaiveBayes."
    ]
   },
   {
@@ -2118,6 +2118,69 @@
     "# Empty dataFrame that will have all the results - to be printed at the end\n",
     "results_df = pd.DataFrame(columns=['Model', 'Accuracy'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Optimizing models performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.1 Logistic regression - using standartization scaling and Median+drop_rows imputation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.2 Naive Bayes - using MinMax scaling and KNN+drop_rows+drop_cols imputation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.3 KNN - using MinMax scaling and median imputation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.4 Decision Tree - using MinMax scaling and KNN+drop_rows+drop_cols imputation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
