--- a/HA2/HA2.ipynb
+++ b/HA2/HA2.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder, MinMaxScaler\n",
     "from sklearn.impute import SimpleImputer, KNNImputer\n",
@@ -2180,7 +2180,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#TODO Complete the code with appropriate X and y for used scaling and imputation. DONT RUN THIS CELL UNLESS THAT WAS DONE\n",
+    "\n",
+    "# Define the parameter grid\n",
+    "param_grid = {\n",
+    "    'criterion': ['gini', 'entropy'],\n",
+    "    'splitter': ['best', 'random'],\n",
+    "    'max_depth': [None, 10, 20, 30, 40, 50],\n",
+    "    'min_samples_split': [2, 5, 10],\n",
+    "    'min_samples_leaf': [1, 2, 4]\n",
+    "}\n",
+    "\n",
+    "model = DecisionTreeClassifier()\n",
+    "grid_search = GridSearchCV(model, param_grid, cv=5, scoring='accuracy')\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Print the best hyperparameters\n",
+    "print(\"Best Hyperparameters:\", grid_search.best_params_)\n",
+    "best_model = grid_search.best_estimator_\n",
+    "\n",
+    "y_pred = best_model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the best model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
+    "classification_rep = classification_report(y_test, y_pred)\n",
+    "\n",
+    "# Print the evaluation metrics for the best model\n",
+    "print(f\"Best Model Accuracy: {accuracy}\")\n",
+    "print(f\"Best Model Confusion Matrix:\\n{conf_matrix}\")\n",
+    "print(f\"Best Model Classification Report:\\n{classification_rep}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2336,7 +2367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
