Updated Decision Tree
finished Decision Tree model

--- a/HA2/HA2.ipynb
+++ b/HA2/HA2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "4   ?   ?   ?  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
+       "      <th>Class</th>\n",
        "      <th>3</th>\n",
        "      <th>1</th>\n",
        "      <th>5</th>\n",
@@ -751,7 +751,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Class</th>\n",
+       "      <th>count</th>\n",
        "      <td>16344</td>\n",
        "      <td>16265</td>\n",
        "      <td>15733</td>\n",
@@ -763,11 +763,11 @@
        "</div>"
       ],
       "text/plain": [
-       "           3      1      5      2      4\n",
-       "Class  16344  16265  15733  14978  14775"
+       "Class      3      1      5      2      4\n",
+       "count  16344  16265  15733  14978  14775"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
+       "      <th>User</th>\n",
        "      <th>0</th>\n",
        "      <th>1</th>\n",
        "      <th>2</th>\n",
@@ -949,7 +949,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>User</th>\n",
+       "      <th>count</th>\n",
        "      <td>9048</td>\n",
        "      <td>4717</td>\n",
        "      <td>4513</td>\n",
@@ -970,11 +970,11 @@
        "</div>"
       ],
       "text/plain": [
-       "        0     1     2    4     5     6    7     8     9     10    11    12  \\\n",
-       "User  9048  4717  4513  379  5105  4377  492  6811  3920  9573  8061  4865   \n",
+       "User     0     1     2    4     5     6    7     8     9     10    11    12  \\\n",
+       "count  9048  4717  4513  379  5105  4377  492  6811  3920  9573  8061  4865   \n",
        "\n",
-       "        13    14  \n",
-       "User  8739  7495  "
+       "User     13    14  \n",
+       "count  8739  7495  "
       ]
      },
      "execution_count": 10,
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2281,15 +2281,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO Complete the code with appropriate X and y for used scaling and imputation. DONT RUN THIS CELL UNLESS THAT WAS DONE\n",
+    "# Data with \"MinMax scaling\" and \"KNN +drop_rows+drop_cols\" imputation\n",
+    "imputer = MissingDataImputer(\n",
+    "        columns_to_drop_rows_if_missing_value=[3,4],\n",
+    "        columns_to_impute_with_knn=[5,6,7],\n",
+    "        columns_to_drop=[8,9,10,11]\n",
+    ")\n",
     "\n",
-    "# Define the parameter grid\n",
+    "X_train_imputed, y_train_imputed = imputer.impute(X_train_norm, y_train)\n",
+    "X_test_imputed, y_test_imputed = imputer.impute(X_test_norm, y_test)\n",
+    "\n",
+    "# Hyperparameter tuning\n",
     "param_grid = {\n",
-    "    'criterion': ['gini', 'entropy'],\n",
     "    'splitter': ['best', 'random'],\n",
     "    'max_depth': [None, 10, 20, 30, 40, 50],\n",
     "    'min_samples_split': [2, 5, 10],\n",
@@ -2298,23 +2305,20 @@
     "\n",
     "model = DecisionTreeClassifier()\n",
     "grid_search = GridSearchCV(model, param_grid, cv=5, scoring='accuracy')\n",
-    "grid_search.fit(X_train, y_train)\n",
+    "grid_search.fit(X_train_imputed, y_train_imputed)\n",
     "\n",
     "# Print the best hyperparameters\n",
     "print(\"Best Hyperparameters:\", grid_search.best_params_)\n",
     "best_model = grid_search.best_estimator_\n",
     "\n",
-    "y_pred = best_model.predict(X_test)\n",
+    "y_pred = best_model.predict(X_test_imputed)\n",
     "\n",
     "# Evaluate the best model\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
-    "classification_rep = classification_report(y_test, y_pred)\n",
+    "accuracy = accuracy_score(y_test_imputed, y_pred)\n",
     "\n",
     "# Print the evaluation metrics for the best model\n",
-    "print(f\"Best Model Accuracy: {accuracy}\")\n",
-    "print(f\"Best Model Confusion Matrix:\\n{conf_matrix}\")\n",
-    "print(f\"Best Model Classification Report:\\n{classification_rep}\")\n"
+    "results_hyperparam.loc[len(results_hyperparam)] = ['Decision Tree', accuracy]\n",
+    "print(f\"Best Model Accuracy: {accuracy}\")\n"
    ]
   },
   {
@@ -2359,7 +2363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
