Missing data description final update

--- a/HA2/HA2.ipynb
+++ b/HA2/HA2.ipynb
@@ -1622,7 +1622,8 @@
     "We initially examined the columns `X3`, `Y3`, and `Z3`, each of which had a minimal percentage of missing values (<1%). We analysed all the rows where `X3` values were missing. We discovered that all instances lacking values for X3 were also missing all other values in subsequnet columns. \n",
     "\n",
     "We observed the same trend in the following columns. For each subsequent column all the rows with missing values were also missing values for all subsequent columns.\n",
-    "Eventually, we decided to impute missing values accordingly:\n",
+    "Eventually, we decided to test several approaches, which are tested in the section below, and described in the report.\n",
+    "The solutions include actions like:\n",
     "- for columns [X,Y,Z] 3 and 4 - delete the rows with missing values, as they have most of the attribute values missing and account for a small percentage of data (4%).\n",
     "- for the columns [X,Y,Z] 5, 6, 7, 8, 9, 10  - impute with median values or with knn predictions\n",
     "- for columns [X,Y,Z] 11 - remove those columns, as they have almost all values missing (99.96%)"
